Remove inline styling from modal textarea

--- a/app/assets/stylesheets/comfortable_mexican_sofa/wysihtml5_overrides.css.sass
+++ b/app/assets/stylesheets/comfortable_mexican_sofa/wysihtml5_overrides.css.sass
@@ -5,7 +5,9 @@ body#comfy
     -moz-box-sizing: content-box
     -webkit-box-sizing: content-box
     box-sizing: content-box
-
+  .bootstrap-wysihtml5-insert-video
+    height: 200px
+    width: 100%
   .modal-body .uploaded-files
     margin-top: 10px
     .file.image
